<resources>
    <string name="app_name">&appname;</string>
    <string name="dfi_mail_id">&dfiId;</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="ok_tag">OK</string>
    <string name="save_tag">Save</string>
    <string name="cancel_tag">Cancel</string>
    <string name="exit_tag">Exit</string>
    <string name="menu_exit_app">Close SampleApps</string>
    <string name="menu_about">About</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_update_licence">Update Licence</string>
    <string name="setup_deviceinfo_label">Device Info</string>
    <string name="setup_devicename_label">Device Name</string>
    <string name="setup_filenetwork_label">File Network</string>
    <string name="setup_server_path_label">Server Path</string>
    <string name="setup_licensekey_label">License Key</string>
    <string name="setup_password_label">Password</string>
    <string name="setup_username_label">Username</string>
    <string name="setup_ftp_security_label">FTP File Type</string>
    <string name="setup_servers_label">Servers</string>
    <string name="setup_license_label">License Types</string>
    <string name="setup_license_option_label">Device License Option</string>
    <string name="setup_config_password_label">Admin Password</string>
    <string name="setup_licence_sync_label">Site Licensed?</string>
    <string name="setup_test">Connection Test</string>
    <string name="setup_select_license_option_type">Select Device License Option</string>
    <string name="setup_select_server_type">Select Server Type</string>
    <string name="setup_select_license_type">Select License Type</string>
    <string name="setup_select_ftp_security_type">Select FTP Security Type</string>
    <string name="setup_orientation">Orientation</string>
    <string name="setup_language">Language</string>
    <string name="setup_select_orientation">Select Orientation</string>
    <string name="setup_select_language">Select Language</string>
    <string name="setup_select_theme_color">Select Theme Color</string>
    <string name="setup_colour">Colour</string>
    <string name="setup_please_put_device_name">Please put Device Name.</string>
    <string name="setup_please_select_license_type">Please select License Type.</string>
    <string name="setup_please_select_server_type">Please select Server Type.</string>
    <string name="setup_please_select_security_type">Please select Security Type.</string>
    <string name="setup_please_put_file_name">Please put File Name.</string>
    <string name="setup_please_put_password">Please put Password.</string>
    <string name="setup_please_put_pdf_path">Please put PDF Path.</string>
    <string name="setup_please_select_file_type">Please select File Type.</string>
    <string name="setup_please_select_language_type">Please select Language Type.</string>
    <string name="setup_please_select_colour_theme">Please select Colour Theme.</string>
    <string name="setup_please_put_admin_password1">Please put Admin Password.</string>
    <string name="setup_please_put_user_name">Please put user name.</string>
    <string name="setup_setup_has_been_saved">Setup has been saved.</string>
    <string name="setup_test_connection_dot">Test Connection...</string>
    <string name="setup_server_has_been_connected_successfully">Server has been connected successfully.</string>
    <string name="setup_log_on_to_server">Log on to server</string>
    <string name="setup_connect_to_server">Connect to server</string>
    <string name="setup_enter_new_admin_password">Enter Admin Password!</string>
    <string name="setup_enter_new_password">Enter New Password.</string>
    <string name="setup_enter_re_password">Enter Re-Password.</string>
    <string name="setup_enter_old_password">Enter Old Password.</string>
    <string name="setup_show_password">Show Password</string>
    <string name="setup_admin_password_has_been_successfully_changed">Admin Password has been successfully changed.</string>
    <string name="setup_old_password_is_wrong">Old password is wrong.</string>
    <string name="setup_re_enter_password_is_wrong">Please, Re-Enter Password.</string>
    <string name="setup_Please_enter_the_administrator_password">Please enter the administrator password.</string>
    <string name="setup_The_administrator_password_entered_is_invalid">The administrator password entered is invalid.</string>
    <string name="setup_user_name">User Name</string>
    <string name="setup_server_id">Server Id</string>
    <string name="setup_server_folder">Server Folder</string>
    <string name="both_tag">Both</string>
    <string name="landscape_tag">Landscape</string>
    <string name="portrait_tag">Portrait</string>
    <string name="ftp_tag">FTP</string>
    <string name="ftps_tag">FTPS</string>
    <string name="sftp_tag">SFTP</string>
    <string name="local_license_tag">Local License</string>
    <string name="site_license_tag">Site License</string>
    <string name="ftp_server_tag">FTP Server</string>
    <string name="file_server_tag">File Server</string>
    <string name="device_server_tag">Device Server</string>
    <string name="google_drive_server_tag">Google Drive Server</string>
    <string name="about_signit_free">About SampleApps Free</string>
    <string name="about_signit_lite">About SampleApps Lite</string>
    <string name="about_signit_standard">About SampleApps Standard</string>
    <string name="about_signit_enterprise">About SampleApps Enterprise</string>
    <string name="error_dot">Error...</string>
    <string name="permission_accept_btn">Permission Accept</string>
    <string name="permission_denied_btn">Permission Denied</string>
    <string name="screen_setup">Setup Screen</string>
    <string name="legalAgreement">By %1$s this document you are entering into a legally binding contract</string>
    <string name="button_Test">Test Connection</string>
    <string name="email_to">To</string>
    <string name="email_deviceinfo">Device Info</string>
    <string name="email_fullname">Full Name</string>
    <string name="email_licenceType">Licence Type</string>
    <string name="email_companyname">Company Name</string>
    <string name="email_phonenumber">Phone Number</string>
    <string name="email_postaladdress">Address</string>
    <string name="email_emailaddress">Reply-To Email Address</string>
    <string name="email_send_tag">Send</string>
    <string name="email_discard_tag">Discard</string>
    <string name="email_screen">Email Screen</string>
    <string name="email_payment_details_file_is_not">Payment Details file is not available, please purchase first or contact with admin!</string>
    <string name="email_device_code">Device Code</string>
    <string name="email_license_kay_subject">License Key - &appname; </string>
    <string name="email_there_are_no_email_applications_installed">There are no email applications installed.</string>
    <string name="add_permission">Add Permission</string>
    <string name="add_permission_message">This permission for access account list, which have present in current device.</string>
    <string name="network_connection_is_not_available">Network connection is not available.</string>
    <string name="this_app_needs_to_access_your_google_account">This app needs to access your Google account (via Contacts).</string>
    <string name="google_api_result_not_match">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="eval_text_connection">TestConnection...</string>
    <string name="eval_server_is_connected_sucessfully">Server is connected Successfully!</string>
    <string name="error_message_start">The following error occurred:\\n</string>
    <string name="button_Activate">Activate</string>
    <string name="button_Email">Email</string>
    <string name="button_PickFiles">PickFiles</string>
    <string name="button_Payment">Payment</string>
    <string name="button_Help">Help</string>
    <string name="licence_screen">License Screen</string>
    <string name="help_dialog_tittle">How to activate license</string>
    <string name="help_dialog_message">Please click the Email button and enter your full name, your company name,
        address and phone number and email to DFI Support at &dfiId; for an SampleApps activation code.  An activation code will
        be email back to you that is required to activate this device. In case DFI Support has already informed you to get License
        key from Server, please press Pick button.</string>
    <string name="licence_kay_wrong_message">Wrong License Key has wrong, please try more or contact with admin!</string>
    <string name="activate_tag">Activate</string>
    <string name="activate_message">Device is activated sucessfully.</string>
    <string name="folderShort_choice_label">Folder Short:</string>
    <string name="pick_license_setup">Pick License/Setup</string>
    <string name="folder_can_be_read">] folder can\'t be read!</string>
    <string name="was_copied_to_signIT_ADG_folder">was copied to &appname; Folder.</string>
    <string name="pickfile_choice_label">Pick:</string>
    <string name="could_not_remove_non_existing">Could not remove non-existing resource</string>
    <string name="successfully_removed_resource">Successfully removed resource</string>
    <string name="folder_short_by_name">Name</string>
    <string name="folder_short_by_date">Date</string>
    <string name="pickfile_options_license">License File</string>
    <string name="pickfile_copy_to_server_options_license">Site License File</string>
    <string name="pickfile_options_setup">Setup File</string>
    <string name="pickfile_options_folder">Folder To Copy Files</string>
    <string name="pickfile_options_subfolder">Folder To Copy /W Subfolders</string>
    <string name="pickfile_options_copy_file_on_in_folder">Copy File To Local/Server In Folder</string>
    <string name="copyFolder">Copy Folder</string>
    <string name="buy_with_google_pay">Buy with Google</string>
    <string name="lite_tag">Lite</string>
    <string name="standared_tag">Standared</string>
    <string name="enterprise_tag">Enterprise</string>
    <string name="buy_with_paypal_pay">Buy with Paypal</string>
    <string name="button_SaveSetup">Save Setup</string>
    <string name="permission">Permission!</string>
    <string name="sdcard_permission_message">&appname; Application Need to create &appname; folder
        on Internal/External memory, so please provde the SDCard Read and Write Persmission, then we
        will move for ward.</string>
    <string name="lang_english_tag">English</string>
    <string name="lang_french_tag">French</string>
    <string name="panchgyana_desc_text">Panchgavya in Sanskrit means a blend of five products obtained from cow and holds an important place in Ayurvedic medicine.
        It is basically a concoction of cow’s dung, urine, milk, curd and ghee. It doesn’t only heal one’s body but also lifts up depressed mental states thereby
        providing positivity, longevity and magnetic charisma. Due to such benefits of Panchgavya, it is often called as a divine elixir by Ayurvedacharyas. Ancient
        scriptures like bhel sanhita, kashyap sanhita, charak sanhita, sushrut sanhita, gad nigrah, ras tantra saar and yog ratnakar granth hail about glory of
        the mix of cow’s five essences – the Panchgavya.\n\n
        The Ayurvedacharyas prescribe Panchgavya as the apex of total health, both physiological as well as psychological. Panchgavya therapy also called as Cowpathy
        has become popular world wide.</string>
    <string name="cow_dung">Cow Dung</string>
    <string name="cow_urine">Cow Urine</string>
    <string name="cow_milk">Cow Milk</string>
    <string name="cow_ghee">Ghee</string>
    <string name="cow_dahi">Dahi</string>
    <string name="benifits">Benefits</string>
</resources>