<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_view_all"
        app:showAsAction="always"
        android:title="VIEW ALL" />

    <item
        android:id="@+id/menuExit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:menuCategory="system"
        android:orderInCategory="4"
        android:title="@string/menu_exit_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:menuCategory="system"
        android:orderInCategory="3"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSetup"
        android:icon="@drawable/action_settings"
        android:menuCategory="system"
        android:orderInCategory="1"
        android:title="@string/menu_setup"
        app:showAsAction="never" />

    <item
        android:id="@+id/updateLicence"
        android:icon="@drawable/action_settings"
        android:menuCategory="system"
        android:orderInCategory="2"
        android:title="@string/menu_update_licence"
        app:showAsAction="never" />

</menu>