<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panchgavya_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/panchgyana_desc_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/cow_dung_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="@string/cow_dung"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cow_urine_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="@string/cow_urine"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cow_milk_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="@string/cow_milk"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cow_ghee_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="@string/cow_ghee"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cow_dahi_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="@string/cow_dahi"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/refrence_dahi_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:gravity="center|left"
                android:onClick="onClickAction"
                android:text="Reference: http://www.djjs.org/kamdhenu/awareness-desk/benefits-of-panchgavyai"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/benifits_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/red_color_selector"
                android:gravity="center"
                android:onClick="onClickAction"
                android:text="@string/benifits"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>