<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_devicename_label"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/device_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_view_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/edit_view_boder"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_license_option_label" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/dev_license_option_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_license_option_type"
                android:maxLength="50" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_license_label" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/license_type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_license_type"
                android:maxLength="50" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_servers_label" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/servers_type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_server_type"
                android:maxLength="50" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/security_tableRow_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:visibility="gone">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dip"
                        android:text="@string/setup_ftp_security_label" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/ftp_server_type_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/setup_textbox_height"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:hint="@string/setup_select_ftp_security_type"
                        android:maxLength="50" />
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/filenetwork_tableRow_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dip"
                        android:text="@string/setup_filenetwork_label" />

                    <EditText
                        android:id="@+id/filenetwork"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_view_height"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_view_boder"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:padding="5dp" />
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/username_tableRow_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setup_user_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dip"
                        android:text="@string/setup_username_label" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_view_height"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_view_boder"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:padding="5dp" />
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/password_tableRow_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setup_password_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dip"
                        android:text="@string/setup_password_label" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_view_height"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_view_boder"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="5dp" />
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ftppath_tableRow_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dip"
                        android:text="@string/setup_server_path_label" />

                    <EditText
                        android:id="@+id/server_file_path"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_view_height"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_view_boder"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:padding="5dp" />
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_config_password_label" />

            <EditText
                android:id="@+id/configpassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_view_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/edit_view_boder"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_orientation" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/orientation_type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_orientation"
                android:maxLength="50" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_language" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/language_type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_language"
                android:maxLength="50" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="3dip"
                android:text="@string/setup_colour" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/color_type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/setup_textbox_height"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:hint="@string/setup_select_theme_color"
                android:maxLength="50" />

        </TableRow>

    </TableLayout>
</RelativeLayout>